--- a/src/template/pug/templates/default.pug
+++ b/src/template/pug/templates/default.pug
@@ -21,4 +21,5 @@ html(lang="ru")
 			include ../../blocks/footer/footer
 
 			+script('lines', 'components')
+			+script('sscroll', 'components')
 			script(src="template/js/common.js" + version)
