--- a/src/template/css/style.css
+++ b/src/template/css/style.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 body {
-  color: #000000;
+  color: #1A1B1F;
   font-size: 16px;
   font-family: "Inter", sans-serif;
   margin-left: auto;
@@ -38,7 +38,7 @@ li {
 }
 
 a {
-  color: #000000;
+  color: #1A1B1F;
   text-decoration: none;
   outline: none;
   transition: 0.3s;
@@ -352,7 +352,7 @@ img, svg, path, circle, rect, line {
   opacity: 0;
   border-radius: 3px;
   transform: scale(0);
-  background-color: #000000;
+  background-color: #1A1B1F;
 }
 .check.--block {
   display: flex;
@@ -550,7 +550,7 @@ body.popup-show {
 
 .bg {
   z-index: -100;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -560,18 +560,48 @@ body.popup-show {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: 15s;
+}
+.bg-blue {
+  color: #fff;
+  background-color: #1E468A;
+}
+
+.wrap {
+  max-width: 1920px;
+  overflow-x: hidden;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header {
   z-index: 100;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   transition: 0.3s;
 }
-.header.--fixed {
+.header.--scrolled {
   background-color: #fff;
+}
+.header.--scrolled .header__logo path[fill*=white] {
+  fill: #1e468a;
+}
+.header.--scrolled .header__phone a {
+  color: #1E468A;
+}
+.header.--scrolled .header__btn-consult {
+  color: #1A1B1F;
+}
+.header.--scrolled .header__btn-consult:hover {
+  color: #1E468A;
+}
+.header.--scrolled .nav__item {
+  color: #1A1B1F;
+}
+.header.--scrolled .nav__item:hover {
+  opacity: 0.6;
 }
 .header__wrap {
   align-items: center;
@@ -620,20 +650,27 @@ body.popup-show {
   margin-right: 16px;
   text-transform: uppercase;
 }
+.nav__item:hover {
+  opacity: 0.5;
+}
 
-.section {
-  height: 100vh;
+.section__inner {
+  z-index: 1;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  height: 100%;
+}
+.section.--current .bg img {
+  transform: scale(1.3);
 }
 
 .intro {
   color: #fff;
 }
 .intro .case {
-  display: flex;
-  align-items: flex-end;
-  height: 100%;
   padding-bottom: 120px;
-  opacity: 0;
 }
 .intro__content {
   width: 100%;
@@ -646,6 +683,13 @@ body.popup-show {
   position: absolute;
   right: 115px;
   bottom: 120px;
+}
+.intro__pluses {
+  position: absolute;
+  top: 155px;
+  right: 50%;
+  width: 609px;
+  margin-right: -725px;
 }
 .scroll {
   display: flex;
