--- a/src/template/sass/style.sass
+++ b/src/template/sass/style.sass
@@ -24,7 +24,7 @@
 
 .bg
 	z-index: -100
-	position: absolute
+	position: fixed
 	top: 0
 	left: 0
 	right: 0
@@ -33,16 +33,46 @@
 		width: 100%
 		height: 100%
 		object-fit: cover
+		transition: 15s
 
+	&-blue
+		color: #fff
+		background-color: $blue
+
+.wrap
+	max-width: 1920px
+	overflow-x: hidden
+	margin-left: auto
+	margin-right: auto
 .header
 	z-index: 100
-	position: absolute
+	position: fixed
 	top: 0
 	left: 0
 	right: 0
 	transition: $t
-	&.--fixed
+	&.--scrolled
 		background-color: #fff
+		.header
+			&__logo
+				path
+					&[fill*="white"]
+						fill: rgb(30, 70, 138)
+			&__phone
+				a
+					color: $blue
+			&__btn-consult
+				color: $black
+				&:hover
+					color: $blue
+				
+		.nav
+			&__item
+				color: $black
+				&:hover
+					opacity: .6
+
+				
 	&__wrap
 		align-items: center
 		height: 80px
@@ -83,18 +113,28 @@
 		margin-left: 16px
 		margin-right: 16px
 		text-transform: uppercase
+		&:hover
+			opacity: 0.5
 
 .section
-	height: 100vh
+	// height: 100%
+	&__inner
+		z-index: 1
+		position: relative
+		display: flex
+		flex-wrap: wrap
+		align-items: flex-end
+		height: 100%
+	&.--current
+		.bg
+			img
+				transform: scale(1.3)
 
 .intro
 	color: #fff
 	.case
-		display: flex
-		align-items: flex-end
-		height: 100%
 		padding-bottom: 120px
-		opacity: 0
+		// opacity: 0
 	&__content
 		width: 100%
 		max-width: 960px
@@ -104,6 +144,12 @@
 		position: absolute
 		right: 115px
 		bottom: 120px
+	&__pluses
+		position: absolute
+		top: 155px
+		right: 50%
+		width: 609px
+		margin-right: -725px
 	&__bg
 		// opacity: 0
 		
@@ -159,3 +205,4 @@
 	position: relative
 	z-index: 1
 	overflow: hidden
+
