--- a/src/template/pug/pages/taxi/taxi.pug
+++ b/src/template/pug/pages/taxi/taxi.pug
@@ -6,6 +6,7 @@ block vars
 			['Главная', 'index.html'],
 			[title]
 		]
+		sidenav = true
 block content
 	.intro.section.lines.bg-yellow#intro
 		.section__inner
