--- a/src/template/pug/pages/transport/transport.pug
+++ b/src/template/pug/pages/transport/transport.pug
@@ -5,7 +5,9 @@ block vars
 		breadcrumbs = [
 			['Главная', 'index.html'],
 			[title]
+			
 		]
+		sidenav = true
 block content
 	.intro.section.lines.bg-green-l#intro
 		.section__inner
